# MR-reviewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mr-reviewer-server.spec  pyproject.toml
frontend/: .gitignore  electron-builder.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
frontend/build-resources/: entitlements.mac.plist
frontend/electron/: main.ts  preload.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CommentCard.tsx  DiffBlock.tsx  SeverityBadge.tsx  ShortcutHelp.tsx  SkeletonCommentCard.tsx  StepIndicator.tsx  StepTimeline.tsx
frontend/src/context/: ReviewContext.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ConfigurePage.tsx  ConfirmationPage.tsx  ReviewPage.tsx  SettingsPage.tsx
frontend/src/types/: api.ts  electron.d.ts  index.ts
mr_reviewer/: __init__.py  __main__.py  claude.py  config.py  core.py  diff_parser.py  exceptions.py  gitlab_client.py  models.py  parallel.py  prompts.py  server_entry.py  url_parser.py
mr_reviewer/api/: __init__.py  app.py  routes.py  schemas.py  state.py
mr_reviewer/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py
scripts/: build-backend.ps1  build-backend.sh
tests/: test_api.py  test_auth_middleware.py  test_config.py  test_core.py  test_diff_parser.py  test_models.py  test_parallel.py  test_platforms.py  test_prompts.py  test_providers.py  test_url_parser.py
